--- a/PASSCITY-iOS/CardEntryViewController.storyboard
+++ b/PASSCITY-iOS/CardEntryViewController.storyboard
@@ -55,18 +55,19 @@
                                         <color key="textColor" red="0.59993284940000002" green="0.60003870729999997" blue="0.59992617370000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nyY-ed-XwQ">
-                                        <rect key="frame" x="152.5" y="348" width="70" height="70"/>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nyY-ed-XwQ">
+                                        <rect key="frame" x="152.5" y="348" width="70" height="52"/>
                                         <color key="tintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <state key="normal" image="iconScanCode">
+                                        <state key="normal" image="iconScanCodeSmall">
                                             <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
                                             <action selector="scanCodeButtonsAction:" destination="isW-we-BdB" eventType="touchUpInside" id="hE7-8J-FZY"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SRp-RU-hUO">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SRp-RU-hUO">
                                         <rect key="frame" x="30" y="545" width="30" height="28"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         <state key="normal" image="chat">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -74,7 +75,7 @@
                                             <action selector="chatButtonAction:" destination="isW-we-BdB" eventType="touchUpInside" id="xts-U6-7Gd"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JLW-rE-AP6" customClass="GoButton" customModule="PASSCITY_iOS" customModuleProvider="target">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JLW-rE-AP6" customClass="GoButton" customModule="PASSCITY_iOS" customModuleProvider="target">
                                         <rect key="frame" x="87.5" y="465" width="200" height="48"/>
                                         <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -94,9 +95,9 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nq6-oQ-hsw">
-                                        <rect key="frame" x="238" y="545" width="107" height="22"/>
-                                        <state key="normal" title="пропустить" image="iconArrowRight">
+                                    <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="999" horizontalCompressionResistancePriority="999" verticalCompressionResistancePriority="999" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nq6-oQ-hsw">
+                                        <rect key="frame" x="245" y="544" width="100" height="30"/>
+                                        <state key="normal" title="пропустить  &gt;">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
@@ -107,7 +108,7 @@
                                         <rect key="frame" x="325" y="224.5" width="20" height="20"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xll-U3-RZn">
-                                        <rect key="frame" x="126" y="424" width="123" height="30"/>
+                                        <rect key="frame" x="126" y="406" width="123" height="30"/>
                                         <state key="normal" title="Сканировать код">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
@@ -121,6 +122,7 @@
                                     <constraint firstItem="QsH-y9-eFh" firstAttribute="leading" secondItem="M1L-xd-BGS" secondAttribute="leading" constant="20" id="4Xm-Jm-Nkl"/>
                                     <constraint firstItem="Nq6-oQ-hsw" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Xll-U3-RZn" secondAttribute="bottom" priority="600" constant="10" id="56h-LS-iul"/>
                                     <constraint firstItem="Xll-U3-RZn" firstAttribute="centerX" secondItem="M1L-xd-BGS" secondAttribute="centerX" id="6aM-2v-M1I"/>
+                                    <constraint firstItem="Nq6-oQ-hsw" firstAttribute="centerY" secondItem="SRp-RU-hUO" secondAttribute="centerY" id="6eN-Yd-axH"/>
                                     <constraint firstItem="ImU-n3-xoG" firstAttribute="leading" secondItem="M1L-xd-BGS" secondAttribute="leading" constant="30" id="H0a-pM-jOL"/>
                                     <constraint firstItem="4Kd-98-T5A" firstAttribute="top" relation="greaterThanOrEqual" secondItem="7tb-51-B4W" secondAttribute="bottom" constant="10" id="JFO-OO-TmQ"/>
                                     <constraint firstAttribute="bottom" secondItem="JLW-rE-AP6" secondAttribute="bottom" priority="500" constant="90" id="MJd-zf-k9w"/>
@@ -128,18 +130,18 @@
                                     <constraint firstAttribute="trailing" secondItem="7tb-51-B4W" secondAttribute="trailing" constant="30" id="Pnj-0l-vBI"/>
                                     <constraint firstItem="nyY-ed-XwQ" firstAttribute="top" secondItem="4Kd-98-T5A" secondAttribute="bottom" constant="30" id="QDg-qL-7N6"/>
                                     <constraint firstItem="ImU-n3-xoG" firstAttribute="top" relation="greaterThanOrEqual" secondItem="M1L-xd-BGS" secondAttribute="top" constant="20" id="T9w-a9-osm"/>
-                                    <constraint firstAttribute="bottom" secondItem="Nq6-oQ-hsw" secondAttribute="bottom" constant="36" id="X2Y-b4-fSf"/>
                                     <constraint firstItem="QsH-y9-eFh" firstAttribute="centerX" secondItem="M1L-xd-BGS" secondAttribute="centerX" id="Yxw-cK-oLw"/>
                                     <constraint firstItem="2Sb-sD-6wr" firstAttribute="centerY" secondItem="EQU-S0-Vg8" secondAttribute="centerY" id="ZLe-VI-cYB"/>
                                     <constraint firstAttribute="trailing" secondItem="ImU-n3-xoG" secondAttribute="trailing" constant="30" id="awF-IV-Ve1"/>
                                     <constraint firstItem="7tb-51-B4W" firstAttribute="top" secondItem="EQU-S0-Vg8" secondAttribute="bottom" constant="10" id="c51-oV-h7c"/>
                                     <constraint firstItem="7tb-51-B4W" firstAttribute="leading" secondItem="M1L-xd-BGS" secondAttribute="leading" constant="30" id="cPC-cg-awr"/>
-                                    <constraint firstItem="nyY-ed-XwQ" firstAttribute="centerX" secondItem="M1L-xd-BGS" secondAttribute="centerX" id="cXH-KF-nNx"/>
+                                    <constraint firstItem="nyY-ed-XwQ" firstAttribute="centerX" secondItem="M1L-xd-BGS" secondAttribute="centerX" priority="998" id="cXH-KF-nNx"/>
                                     <constraint firstItem="QsH-y9-eFh" firstAttribute="top" secondItem="ImU-n3-xoG" secondAttribute="bottom" constant="15" id="cqJ-0K-mqb"/>
-                                    <constraint firstAttribute="trailing" secondItem="Nq6-oQ-hsw" secondAttribute="trailing" constant="30" id="d9A-S1-jAe"/>
+                                    <constraint firstAttribute="trailing" secondItem="Nq6-oQ-hsw" secondAttribute="trailing" priority="500" constant="30" id="d9A-S1-jAe"/>
                                     <constraint firstItem="4Kd-98-T5A" firstAttribute="top" secondItem="7tb-51-B4W" secondAttribute="bottom" priority="500" constant="40" id="hv5-ft-Vyt"/>
                                     <constraint firstItem="ImU-n3-xoG" firstAttribute="centerX" secondItem="M1L-xd-BGS" secondAttribute="centerX" id="hxG-4e-atj"/>
                                     <constraint firstAttribute="trailing" secondItem="QsH-y9-eFh" secondAttribute="trailing" constant="20" id="jSd-pX-wHd"/>
+                                    <constraint firstItem="Nq6-oQ-hsw" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="nyY-ed-XwQ" secondAttribute="trailing" constant="5" id="jhC-oX-ouY"/>
                                     <constraint firstItem="JLW-rE-AP6" firstAttribute="centerX" secondItem="M1L-xd-BGS" secondAttribute="centerX" id="jjj-Rs-Noy"/>
                                     <constraint firstItem="JLW-rE-AP6" firstAttribute="top" relation="greaterThanOrEqual" secondItem="4Kd-98-T5A" secondAttribute="bottom" constant="20" id="mis-EH-QSu"/>
                                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="JLW-rE-AP6" secondAttribute="bottom" constant="10" id="qS7-IX-Tkd"/>
@@ -151,6 +153,7 @@
                                     <constraint firstItem="EQU-S0-Vg8" firstAttribute="trailing" secondItem="7tb-51-B4W" secondAttribute="trailing" id="xZS-ue-NP8"/>
                                     <constraint firstAttribute="bottom" secondItem="SRp-RU-hUO" secondAttribute="bottom" constant="30" id="yja-Zy-EOH"/>
                                     <constraint firstItem="EQU-S0-Vg8" firstAttribute="top" secondItem="QsH-y9-eFh" secondAttribute="bottom" priority="500" constant="70" id="zkL-1O-54z"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Nq6-oQ-hsw" secondAttribute="trailing" constant="15" id="zpJ-U1-O0s"/>
                                     <constraint firstItem="ImU-n3-xoG" firstAttribute="top" secondItem="M1L-xd-BGS" secondAttribute="top" priority="500" constant="90" id="zrj-fT-0L3"/>
                                 </constraints>
                             </view>
@@ -188,8 +191,7 @@
     </scenes>
     <resources>
         <image name="chat" width="30" height="28"/>
-        <image name="iconArrowRight" width="10" height="10"/>
         <image name="iconDone" width="20" height="20"/>
-        <image name="iconScanCode" width="70" height="70"/>
+        <image name="iconScanCodeSmall" width="70" height="52"/>
     </resources>
 </document>
