--- a/PASSCITY-iOS/CardEntryViewController.storyboard
+++ b/PASSCITY-iOS/CardEntryViewController.storyboard
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="M1L-xd-BGS">
-                                <rect key="frame" x="0.0" y="-66" width="375" height="603"/>
+                                <rect key="frame" x="-89" y="-20" width="375" height="603"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Введите номер карты" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ImU-n3-xoG">
                                         <rect key="frame" x="30" y="90" width="315" height="26.5"/>
@@ -94,6 +94,9 @@
                                                 <real key="value" value="24"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="confirmButtonAction:" destination="isW-we-BdB" eventType="touchUpInside" id="kS6-4y-GS1"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="999" horizontalCompressionResistancePriority="999" verticalCompressionResistancePriority="999" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nq6-oQ-hsw">
                                         <rect key="frame" x="245" y="544" width="100" height="30"/>
@@ -104,7 +107,7 @@
                                             <action selector="skipButtonAction:" destination="isW-we-BdB" eventType="touchUpInside" id="VSK-Lo-3hH"/>
                                         </connections>
                                     </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconDone" translatesAutoresizingMaskIntoConstraints="NO" id="2Sb-sD-6wr">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ч&gt;" translatesAutoresizingMaskIntoConstraints="NO" id="2Sb-sD-6wr">
                                         <rect key="frame" x="325" y="224.5" width="20" height="20"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xll-U3-RZn">
@@ -177,6 +180,7 @@
                         <outlet property="iconDoneImageView" destination="2Sb-sD-6wr" id="xxX-bw-0Ia"/>
                         <outlet property="retryLeftCountLabel" destination="4Kd-98-T5A" id="UdI-fN-WCh"/>
                         <outlet property="scanCodeButton" destination="nyY-ed-XwQ" id="g1P-rp-Ur5"/>
+                        <outlet property="scanCodeTextButton" destination="Xll-U3-RZn" id="X6N-uY-h61"/>
                         <outlet property="skipButton" destination="Nq6-oQ-hsw" id="lEY-oZ-Jv2"/>
                         <outletCollection property="additionalViews" destination="nyY-ed-XwQ" collectionClass="NSMutableArray" id="46r-le-WbF"/>
                         <outletCollection property="additionalViews" destination="Xll-U3-RZn" collectionClass="NSMutableArray" id="2uJ-ZQ-WHC"/>
@@ -297,7 +301,7 @@ AMIA2QDbAN0WnxakFq8WuBbLFs8W2hbjFugW8BbzFvgXBxcLFxIXGhcnFywXLhcwFzUXPRdAF0UXTRdQ
 F2IXZRdqAAAAAAAAAgEAAAAAAAAAQQAAAAAAAAAAAAAAAAAAF2w
 </mutableData>
         </image>
-        <image name="iconDone" width="20" height="20"/>
         <image name="iconScanCodeSmall" width="70" height="52"/>
+        <image name="ч&gt;" width="16" height="16"/>
     </resources>
 </document>
